[gd_scene load_steps=4 format=2]

[ext_resource path="res://Src/GUI/CustomerGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/GUI/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/TitleFont.tres" type="DynamicFont" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomerGUI" parent="." instance=ExtResource( 1 )]
anchor_right = 0.728
anchor_bottom = 0.129
margin_right = -136.84
margin_bottom = 0.119995

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.01
anchor_top = 0.885
anchor_right = 0.109
anchor_bottom = 0.987
margin_left = 0.199999
margin_top = -0.200012
margin_right = -0.520004
margin_bottom = -0.640015
custom_fonts/font = ExtResource( 3 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="."]
anchor_left = 0.884
anchor_top = 0.874
anchor_right = 0.987
anchor_bottom = 0.976
margin_left = 0.47998
margin_top = -0.280029
margin_right = -28.3601
margin_bottom = 0.279968
grow_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "$0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.5874
margin_top = -7.0
margin_right = -1.5874
margin_bottom = 7.0
custom_fonts/font = ExtResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
